lame (3.98.1) unstable; urgency=low

  * New upstream version:
    + Fix executable stacks (Thanks to Gentoo people);
    + Fix for text relocations (Thanks to the PaX Team and Gentoo people).
  * changes are now (mostly) committed to changelog.
  * debian/rules: include -Wl,--as-needed for the loader at compile time.

 -- Rogério Brito <rbrito@users.sf.net>  Sat, 12 Jul 2008 09:14:54 -0300

lame (3.98) unstable; urgency=low

  * Preparation for the final release.

 -- Rogério Brito <rbrito@users.sf.net>  Sun, 29 Jun 2008 18:29:09 -0300

lame (3.98~beta8+cvs20080624) unstable; urgency=low

  * Preparation for the new upstream release (lame 3.98 final).
  * debian/control: eliminate build dependency on gtk1.2-dev.
  * debian/rules: include -Wextra in the CFLAGS variable.
  * debian/rules: explicitly disable some features from the build.

 -- Rogério Brito <rbrito@users.sf.net>  Tue, 24 Jun 2008 15:16:22 -0300

lame (3.98~beta8+cvs20080514) unstable; urgency=low

  * Fixing debian packaging details.
  * debian/rules: put detection of architectures for cross-compilation.
  * debian/rules: included support for noopt option.
  * debian/rules: take more care of building everything under debian/tmp.
  * debian/control: updated to Standards-Version 3.7.3 (no changes).
  * debian/control: put correctly Conflicts: and Replaces in libmp3lame0{,-dev}.
  * debian/lame.docs: remove TODO and sort by name.
  * debian/libmp3lame0-dev.docs: include TODO.
  * debian/libmp3lame0-dev: include liblame0.so in the package.
  * debian/watch: include watchfile.

 -- Rogério Brito <rbrito@users.sf.net>  Wed, 14 May 2008 01:44:46 -0300

lame (3.98~alpha1) unstable; urgency=low

  * New upstream release with various improvements;
  * Use libsndfile for input files;
  * Remove the parts that depend on gtk-1.2;
  * debian/rules: remove the DH_COMPAT variable;
  * debian/control: use ${binary:Version} to be up-to-date;
  * debian/control: use debhelper version >= 5;
	